loan-obtaining page and blog page

--- a/#src/scss/components/_index.scss
+++ b/#src/scss/components/_index.scss
@@ -2,6 +2,7 @@
 @import "buttons";
 @import "input";
 @import "accordion";
+@import "pagination";
 // @import "tabs";
 // @import "modals";
 @import "header";
