--- a/#src/scss/components/titles.scss
+++ b/#src/scss/components/titles.scss
@@ -1,4 +1,16 @@
 .title {
+    &-h1 {
+        font-weight: 700;
+        font-size: 45px;
+        line-height: 49px;
+        letter-spacing: 0.3px;
+
+        @media screen and (max-width: $layoutDesktop - 0.02 + 'px') {
+            font-size: calc(35px + 10 * ((100vw - #{$layoutMobile}px) / (#{$layoutDesktop} - #{$layoutMobile})));
+            line-height: calc(49 / 45);
+        }
+    }
+
     &-h2 {
         font-weight: 700;
         font-size: 30px;
